# animation_programming

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  FindGLFW3.cmake  FindGLM.cmake  ccache.cmake
shader/: basic.frag  basic.vert
src/core/: CMakeLists.txt  Version.h.in  assert.hpp  attributes.hpp  main.cpp  window.cpp  window.hpp
src/platform/: CMakeLists.txt  platform_manager.cpp  platform_manager.hpp  window_interface.hpp
src/platform/opengl/: opengl_window.cpp  opengl_window.hpp
src/platform/opengl/model/: model.cpp  model.hpp
src/platform/opengl/render/: framebuffer.cpp  framebuffer.hpp  ogl_render_data.hpp  ogl_renderer.cpp  ogl_renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/platform/vulkan/: vulkan_window.cpp  vulkan_window.hpp
